--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 JWT_SECRET="random#secret"
 STRIPE_SECRET_KEY="sk_test_tR3PYbcVNZZ796tH88S4VQ2u"
+MONGO_URL="mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority"
+PORT="4000"
 
